--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         background-attachment: fixed;
       }
 
+      .object-fit-cover {
+        object-fit: cover;
+      }
+
       .deco-box {
         width: 240px;
         height: 240px;
@@ -52,36 +56,38 @@
       </div>
     </header>
 
-    <div class="😚 😓😋">
-      <div class="😡 🙍 😯😉 😖😏">
-        <div class="🙄😁">
+    <div class="container py-5">
+      <div class="row justify-content-center flex-md-row-reverse gy-3">
+        <div class="col-md-4 😁">
           <img
             src="https://images.unsplash.com/photo-1612282131240-6e878907d0f6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1421&q=80"
-            class="😎😉 😳😌"
+            class="w-100 object-fit-cover"
             height="500"
             alt=""
           />
         </div>
-        <div class="🙅😁 😣😈 😵😉">
+        <div class="col-md-5 d-flex align-items-center">
           <div>
-            <h2 class="😌">我的冒險故事：</h2>
+            <h2 class="display-4">我的冒險故事：</h2>
             <p>
               你紙爸發全家聽，綠間不結縣我究，個毛亮高人。卻高酒死這形易止經我腳家立力還上這可......回男腦回義心便有當會兩水記生這自；演般否前出級就話萬水直無基可住。廣製因，全氣改我？
             </p>
             <p>
               為說過著因識空共十房比面科別工人人變童角力男馬媽手趣。明型大方失，經面事馬，來聲小施大；看地自一適，在書寫賽我在。子帶出麼如就味那解的：最半有手然能勢此精觀山好沒生快我足很麗而變最放，上英灣媽？
             </p>
-            <a href="#" class="🙀😄 😍😅 😖😊 😎😉"> 看更多我的冒險故事 </a>
+            <a href="#" class="btn btn-outline-primary mt-4 w-100">
+              看更多我的冒險故事
+            </a>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="😔😌 🙎😐 😓😋 🙉😏">
-      <div class="😚">
-        <h2 class="😌 🙀😋 😤😊">我的實戰作品：</h2>
-        <div class="😡 😤 😠😂 🙎">
-          <div class="😢">
+    <div class="bg-light py-5 m-md-5 g-4">
+      <div class="container">
+        <h2 class="display-4 text-center mb-4">我的實戰作品：</h2>
+        <div class="row row-cols-1 row-cols-lg-3 🙎">
+          <div class="col">
             <div class="😆😆 😄😌 😊😉 😖😉">
               <img
                 src="https://images.unsplash.com/photo-1560461396-ec0ef7bb29dd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80"
@@ -97,7 +103,7 @@
               </div>
             </div>
           </div>
-          <div class="😢">
+          <div class="col">
             <div class="😆😆 😖😉 😊😉">
               <img
                 src="https://images.unsplash.com/photo-1561070791-2526d30994b5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80"
@@ -113,7 +119,7 @@
               </div>
             </div>
           </div>
-          <div class="😢">
+          <div class="col">
             <div class="😆😆 😖😉 😊😉">
               <img
                 src="https://images.unsplash.com/photo-1565306257414-bbc84fdaaade?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=764&q=80"
