個人簡歷：卡片樣式調整

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
         background-attachment: fixed;
       }
 
+      .bg-dark-gradient {
+        background-image: linear-gradient(
+          180deg,
+          rgba(0, 0, 0, 0),
+          rgba(0, 0, 0, 0.8)
+        );
+      }
+
       .object-fit-cover {
         object-fit: cover;
       }
@@ -86,52 +94,58 @@
     <div class="bg-light py-5 m-md-5 g-4">
       <div class="container">
         <h2 class="display-4 text-center mb-4">我的實戰作品：</h2>
-        <div class="row row-cols-1 row-cols-lg-3 🙎">
+        <div class="row row-cols-1 row-cols-lg-3 p-md-5">
           <div class="col">
-            <div class="😆😆 😄😌 😊😉 😖😉">
+            <div class="card text-white border-5 h-100">
               <img
                 src="https://images.unsplash.com/photo-1560461396-ec0ef7bb29dd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80"
-                class="😒😆 😖😉 😳😌"
+                class="card-img h-100 object-fit-cover"
                 alt="..."
               />
-              <div class="😑😆 😲😈 🙇😘">
-                <h5 class="😋😆">工整一致的設計規範</h5>
-                <p class="😍😆">
+              <div class="card-img-overlay top-auto bg-dark-gradient">
+                <h5 class="card-title">工整一致的設計規範</h5>
+                <p class="card-text">
                   正看了和無是本。眾今少山！期美斯經已家更，兒死自神有根平度如進？就的由？座國式達推知上格到：訴校構人給開收個認是策元。
                 </p>
-                <a href="#" class="🙀😄 😓😅 😇😈 😎😉">看作品</a>
+                <a href="#" class="btn btn-outline-light w-100 stretched-link"
+                  >看作品</a
+                >
               </div>
             </div>
           </div>
           <div class="col">
-            <div class="😆😆 😖😉 😊😉">
+            <div class="card text-white border-5 h-100">
               <img
                 src="https://images.unsplash.com/photo-1561070791-2526d30994b5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80"
-                class="😒😆"
+                class="card-img h-100 object-fit-cover"
                 alt="..."
               />
-              <div class="😑😆 😲😈 😄😌 🙇😘">
-                <h5 class="😋😆">對於色彩細節苛刻要求</h5>
-                <p class="😍😆">
+              <div class="card-img-overlay top-auto bg-dark-gradient">
+                <h5 class="card-title">對於色彩細節苛刻要求</h5>
+                <p class="card-text">
                   簡或之此小修直說文度國留，展事生生海林是，他父之歷之紙一自氣滿媽程，此課個專該後員己響的式女時說旅學古目寶我。
                 </p>
-                <a href="#" class="🙀😄 😓😅 😇😈 😎😉">看作品</a>
+                <a href="#" class="btn btn-outline-light w-100 stretched-link"
+                  >看作品</a
+                >
               </div>
             </div>
           </div>
           <div class="col">
-            <div class="😆😆 😖😉 😊😉">
+            <div class="card text-white border-5 h-100">
               <img
                 src="https://images.unsplash.com/photo-1565306257414-bbc84fdaaade?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=764&q=80"
-                class="😒😆"
+                class="card-img h-100 object-fit-cover"
                 alt="..."
               />
-              <div class="😑😆 😲😈 😄😌 🙇😘">
-                <h5 class="😋😆">忙碌之餘不忘新買的 iPhone</h5>
-                <p class="😍😆">
+              <div class="card-img-overlay top-auto bg-dark-gradient">
+                <h5 class="card-title">忙碌之餘不忘新買的 iPhone</h5>
+                <p class="card-text">
                   和還出走方文走了辦過太他的足供上場室管料實隨招然主了縣：健風用開子案又出傷速他一、廠準我像點港半這，得者團好事形一！們人好來國專少知入這中長，展結去考車活灣下山本……來的熱根兩管著大指復兒風特房以說點。
                 </p>
-                <a href="#" class="🙀😄 😓😅 😇😈 😎😉">看作品</a>
+                <a href="#" class="btn btn-outline-light w-100 stretched-link"
+                  >看作品</a
+                >
               </div>
             </div>
           </div>
