個人簡歷：Footer 製作及表單驗證樣式調整

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
               <li><i class="bi bi-envelope"></i> voluptati@email.com</li>
               <li><i class="bi bi-telephone"></i> 0987-654-321</li>
             </ul>
-            <h3 class="h4 😗😊">社群關注</h3>
+            <h3 class="h4 mt-5">社群關注</h3>
             <ul class="list-unstyled">
               <li><i class="bi bi-instagram"></i> voluptati</li>
               <li><i class="bi bi-facebook"></i> fb.me/voluptati</li>
