refactor: 更換成 ul li 結構

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
       <div class="container">
         <h2 class="display-4 text-center mb-4">我的實戰作品：</h2>
         <!-- 卡片區 -->
-        <div class="row row-cols-1 row-cols-lg-3 p-md-5">
+        <ul class="row row-cols-1 row-cols-lg-3 p-md-5 list-unstyled">
           <!-- 卡片 -->
-          <div class="col">
+          <li class="col">
             <div class="card text-white border-5 h-100">
               <!-- 卡片圖片 -->
               <img
@@ -98,10 +98,10 @@
                 >
               </div>
             </div>
-          </div>
+          </li>
 
           <!-- 卡片 -->
-          <div class="col">
+          <li class="col">
             <div class="card text-white border-5 h-100">
               <!-- 卡片圖片 -->
               <img
@@ -121,10 +121,10 @@
                 >
               </div>
             </div>
-          </div>
+          </li>
 
           <!-- 卡片 -->
-          <div class="col">
+          <li class="col">
             <div class="card text-white border-5 h-100">
               <!-- 卡片圖片 -->
               <img
@@ -144,8 +144,8 @@
                 >
               </div>
             </div>
-          </div>
-        </div>
+          </li>
+        </ul>
       </div>
     </div>
 
